--- a/animals.html
+++ b/animals.html
@@ -67,100 +67,120 @@
     <body>
         <h1>My Animal Repository</h1>
         <ul class="cards">
-            Name: American Foxhound
-            Diet: Carnivora
-            Location: North-America
-            Type: Hound
-
-            Name: Arctic Fox
-            Diet: Carnivora
-            Location: Eurasia, Europe, North-America
-            Type: Mammal
-
-            Name: Cross Fox
-            Diet: Carnivora
-            Location: North-America
-            Type: mammal
-
-            Name: Darwinâ€™s fox
-            Diet: Carnivora
-            Location: South-America
-            Type: Mammal
-
-            Name: English Foxhound
-            Diet: Carnivora
-            Location: Europe
-            Type: Unknown
-
-            Name: Fennec Fox
-            Diet: Carnivora
-            Location: Africa, Asia
-            Type: Unknown
-
-            Name: Fox
-            Diet: Carnivora
-            Location: Africa, Asia, Eurasia, Europe, North-America
-            Type: Mammal
-
-            Name: Fox Snakes
-            Diet: Squamata
-            Location: North-America
-            Type: Unknown
-
-            Name: Fox Squirrel
-            Diet: Rodentia
-            Location: Central-America, North-America
-            Type: rodent
-
-            Name: Fox Terrier
-            Diet: Carnivora
-            Location: Europe
-            Type: Unknown
-
-            Name: Golden-Crowned Flying Fox
-            Diet: Chiroptera
-            Location: Asia
-            Type: Unknown
-
-            Name: Gray Fox
-            Diet: Carnivora
-            Location: Central-America, North-America, South-America
-            Type: Mammal
-
-            Name: Kit Fox
-            Diet: Carnivora
-            Location: Central-America, North-America
-            Type: mammal
-
-            Name: Marble Fox
-            Diet: Carnivora
-            Location: North-America
-            Type: Mammal
-
-            Name: Red Fox
-            Diet: Carnivora
-            Location: Africa, Asia, Europe, North-America, Oceania
-            Type: Unknown
-
-            Name: Smooth Fox Terrier
-            Diet: Carnivora
-            Location: Europe
-            Type: Unknown
-
-            Name: Tibetan Fox
-            Diet: Carnivora
-            Location: Asia
-            Type: Mammal
-
-            Name: Toy Fox Terrier
-            Diet: Carnivora
-            Location: North-America
-            Type: Unknown
-
-            Name: Wire Fox Terrier
-            Diet: Carnivora
-            Location: Europe
-            Type: Unknown
+            <li class="cards__item">
+American Foxhound<br/>
+Diet: Carnivora<br/>
+Location: North-America<br/>
+Type: Hound<br/>
+</li>
+<li class="cards__item">
+Arctic Fox<br/>
+Diet: Carnivora<br/>
+Location: Eurasia, Europe, North-America<br/>
+Type: Mammal<br/>
+</li>
+<li class="cards__item">
+Cross Fox<br/>
+Diet: Carnivora<br/>
+Location: North-America<br/>
+Type: mammal<br/>
+</li>
+<li class="cards__item">
+Darwinâ€™s fox<br/>
+Diet: Carnivora<br/>
+Location: South-America<br/>
+Type: Mammal<br/>
+</li>
+<li class="cards__item">
+English Foxhound<br/>
+Diet: Carnivora<br/>
+Location: Europe<br/>
+Type: Unknown<br/>
+</li>
+<li class="cards__item">
+Fennec Fox<br/>
+Diet: Carnivora<br/>
+Location: Africa, Asia<br/>
+Type: Unknown<br/>
+</li>
+<li class="cards__item">
+Fox<br/>
+Diet: Carnivora<br/>
+Location: Africa, Asia, Eurasia, Europe, North-America<br/>
+Type: Mammal<br/>
+</li>
+<li class="cards__item">
+Fox Snakes<br/>
+Diet: Squamata<br/>
+Location: North-America<br/>
+Type: Unknown<br/>
+</li>
+<li class="cards__item">
+Fox Squirrel<br/>
+Diet: Rodentia<br/>
+Location: Central-America, North-America<br/>
+Type: rodent<br/>
+</li>
+<li class="cards__item">
+Fox Terrier<br/>
+Diet: Carnivora<br/>
+Location: Europe<br/>
+Type: Unknown<br/>
+</li>
+<li class="cards__item">
+Golden-Crowned Flying Fox<br/>
+Diet: Chiroptera<br/>
+Location: Asia<br/>
+Type: Unknown<br/>
+</li>
+<li class="cards__item">
+Gray Fox<br/>
+Diet: Carnivora<br/>
+Location: Central-America, North-America, South-America<br/>
+Type: Mammal<br/>
+</li>
+<li class="cards__item">
+Kit Fox<br/>
+Diet: Carnivora<br/>
+Location: Central-America, North-America<br/>
+Type: mammal<br/>
+</li>
+<li class="cards__item">
+Marble Fox<br/>
+Diet: Carnivora<br/>
+Location: North-America<br/>
+Type: Mammal<br/>
+</li>
+<li class="cards__item">
+Red Fox<br/>
+Diet: Carnivora<br/>
+Location: Africa, Asia, Europe, North-America, Oceania<br/>
+Type: Unknown<br/>
+</li>
+<li class="cards__item">
+Smooth Fox Terrier<br/>
+Diet: Carnivora<br/>
+Location: Europe<br/>
+Type: Unknown<br/>
+</li>
+<li class="cards__item">
+Tibetan Fox<br/>
+Diet: Carnivora<br/>
+Location: Asia<br/>
+Type: Mammal<br/>
+</li>
+<li class="cards__item">
+Toy Fox Terrier<br/>
+Diet: Carnivora<br/>
+Location: North-America<br/>
+Type: Unknown<br/>
+</li>
+<li class="cards__item">
+Wire Fox Terrier<br/>
+Diet: Carnivora<br/>
+Location: Europe<br/>
+Type: Unknown<br/>
+</li>
 
         </ul>
     </body>
