--- a/animals.html
+++ b/animals.html
@@ -67,120 +67,140 @@
     <body>
         <h1>My Animal Repository</h1>
         <ul class="cards">
-            <li class="cards__item">
-American Foxhound<br/>
-Diet: Carnivora<br/>
-Location: North-America<br/>
-Type: Hound<br/>
+       <li class="cards__item">
+<div class="card__title">American Foxhound</div><br/>
+<p class="card__text">
+<strong>Diet:</strong> Carnivora<br/>
+<strong>Location:</strong> North-America<br/>
+<strong>Type:</strong> Hound<br/>
 </li>
 <li class="cards__item">
-Arctic Fox<br/>
-Diet: Carnivora<br/>
-Location: Eurasia, Europe, North-America<br/>
-Type: Mammal<br/>
+<div class="card__title">Arctic Fox</div><br/>
+<p class="card__text">
+<strong>Diet:</strong> Carnivora<br/>
+<strong>Location:</strong> Eurasia, Europe, North-America<br/>
+<strong>Type:</strong> Mammal<br/>
 </li>
 <li class="cards__item">
-Cross Fox<br/>
-Diet: Carnivora<br/>
-Location: North-America<br/>
-Type: mammal<br/>
+<div class="card__title">Cross Fox</div><br/>
+<p class="card__text">
+<strong>Diet:</strong> Carnivora<br/>
+<strong>Location:</strong> North-America<br/>
+<strong>Type:</strong> mammal<br/>
 </li>
 <li class="cards__item">
-Darwinâ€™s fox<br/>
-Diet: Carnivora<br/>
-Location: South-America<br/>
-Type: Mammal<br/>
+<div class="card__title">Darwinâ€™s fox</div><br/>
+<p class="card__text">
+<strong>Diet:</strong> Carnivora<br/>
+<strong>Location:</strong> South-America<br/>
+<strong>Type:</strong> Mammal<br/>
 </li>
 <li class="cards__item">
-English Foxhound<br/>
-Diet: Carnivora<br/>
-Location: Europe<br/>
-Type: Unknown<br/>
+<div class="card__title">English Foxhound</div><br/>
+<p class="card__text">
+<strong>Diet:</strong> Carnivora<br/>
+<strong>Location:</strong> Europe<br/>
+<strong>Type:</strong> Unknown<br/>
 </li>
 <li class="cards__item">
-Fennec Fox<br/>
-Diet: Carnivora<br/>
-Location: Africa, Asia<br/>
-Type: Unknown<br/>
+<div class="card__title">Fennec Fox</div><br/>
+<p class="card__text">
+<strong>Diet:</strong> Carnivora<br/>
+<strong>Location:</strong> Africa, Asia<br/>
+<strong>Type:</strong> Unknown<br/>
 </li>
 <li class="cards__item">
-Fox<br/>
-Diet: Carnivora<br/>
-Location: Africa, Asia, Eurasia, Europe, North-America<br/>
-Type: Mammal<br/>
+<div class="card__title">Fox</div><br/>
+<p class="card__text">
+<strong>Diet:</strong> Carnivora<br/>
+<strong>Location:</strong> Africa, Asia, Eurasia, Europe, North-America<br/>
+<strong>Type:</strong> Mammal<br/>
 </li>
 <li class="cards__item">
-Fox Snakes<br/>
-Diet: Squamata<br/>
-Location: North-America<br/>
-Type: Unknown<br/>
+<div class="card__title">Fox Snakes</div><br/>
+<p class="card__text">
+<strong>Diet:</strong> Squamata<br/>
+<strong>Location:</strong> North-America<br/>
+<strong>Type:</strong> Unknown<br/>
 </li>
 <li class="cards__item">
-Fox Squirrel<br/>
-Diet: Rodentia<br/>
-Location: Central-America, North-America<br/>
-Type: rodent<br/>
+<div class="card__title">Fox Squirrel</div><br/>
+<p class="card__text">
+<strong>Diet:</strong> Rodentia<br/>
+<strong>Location:</strong> Central-America, North-America<br/>
+<strong>Type:</strong> rodent<br/>
 </li>
 <li class="cards__item">
-Fox Terrier<br/>
-Diet: Carnivora<br/>
-Location: Europe<br/>
-Type: Unknown<br/>
+<div class="card__title">Fox Terrier</div><br/>
+<p class="card__text">
+<strong>Diet:</strong> Carnivora<br/>
+<strong>Location:</strong> Europe<br/>
+<strong>Type:</strong> Unknown<br/>
 </li>
 <li class="cards__item">
-Golden-Crowned Flying Fox<br/>
-Diet: Chiroptera<br/>
-Location: Asia<br/>
-Type: Unknown<br/>
+<div class="card__title">Golden-Crowned Flying Fox</div><br/>
+<p class="card__text">
+<strong>Diet:</strong> Chiroptera<br/>
+<strong>Location:</strong> Asia<br/>
+<strong>Type:</strong> Unknown<br/>
 </li>
 <li class="cards__item">
-Gray Fox<br/>
-Diet: Carnivora<br/>
-Location: Central-America, North-America, South-America<br/>
-Type: Mammal<br/>
+<div class="card__title">Gray Fox</div><br/>
+<p class="card__text">
+<strong>Diet:</strong> Carnivora<br/>
+<strong>Location:</strong> Central-America, North-America, South-America<br/>
+<strong>Type:</strong> Mammal<br/>
 </li>
 <li class="cards__item">
-Kit Fox<br/>
-Diet: Carnivora<br/>
-Location: Central-America, North-America<br/>
-Type: mammal<br/>
+<div class="card__title">Kit Fox</div><br/>
+<p class="card__text">
+<strong>Diet:</strong> Carnivora<br/>
+<strong>Location:</strong> Central-America, North-America<br/>
+<strong>Type:</strong> mammal<br/>
 </li>
 <li class="cards__item">
-Marble Fox<br/>
-Diet: Carnivora<br/>
-Location: North-America<br/>
-Type: Mammal<br/>
+<div class="card__title">Marble Fox</div><br/>
+<p class="card__text">
+<strong>Diet:</strong> Carnivora<br/>
+<strong>Location:</strong> North-America<br/>
+<strong>Type:</strong> Mammal<br/>
 </li>
 <li class="cards__item">
-Red Fox<br/>
-Diet: Carnivora<br/>
-Location: Africa, Asia, Europe, North-America, Oceania<br/>
-Type: Unknown<br/>
+<div class="card__title">Red Fox</div><br/>
+<p class="card__text">
+<strong>Diet:</strong> Carnivora<br/>
+<strong>Location:</strong> Africa, Asia, Europe, North-America, Oceania<br/>
+<strong>Type:</strong> Unknown<br/>
 </li>
 <li class="cards__item">
-Smooth Fox Terrier<br/>
-Diet: Carnivora<br/>
-Location: Europe<br/>
-Type: Unknown<br/>
+<div class="card__title">Smooth Fox Terrier</div><br/>
+<p class="card__text">
+<strong>Diet:</strong> Carnivora<br/>
+<strong>Location:</strong> Europe<br/>
+<strong>Type:</strong> Unknown<br/>
 </li>
 <li class="cards__item">
-Tibetan Fox<br/>
-Diet: Carnivora<br/>
-Location: Asia<br/>
-Type: Mammal<br/>
+<div class="card__title">Tibetan Fox</div><br/>
+<p class="card__text">
+<strong>Diet:</strong> Carnivora<br/>
+<strong>Location:</strong> Asia<br/>
+<strong>Type:</strong> Mammal<br/>
 </li>
 <li class="cards__item">
-Toy Fox Terrier<br/>
-Diet: Carnivora<br/>
-Location: North-America<br/>
-Type: Unknown<br/>
+<div class="card__title">Toy Fox Terrier</div><br/>
+<p class="card__text">
+<strong>Diet:</strong> Carnivora<br/>
+<strong>Location:</strong> North-America<br/>
+<strong>Type:</strong> Unknown<br/>
 </li>
 <li class="cards__item">
-Wire Fox Terrier<br/>
-Diet: Carnivora<br/>
-Location: Europe<br/>
-Type: Unknown<br/>
+<div class="card__title">Wire Fox Terrier</div><br/>
+<p class="card__text">
+<strong>Diet:</strong> Carnivora<br/>
+<strong>Location:</strong> Europe<br/>
+<strong>Type:</strong> Unknown<br/>
 </li>
+
 
         </ul>
     </body>
