--- a/animals_template.html
+++ b/animals_template.html
@@ -67,7 +67,101 @@
     <body>
         <h1>My Animal Repository</h1>
         <ul class="cards">
-            __REPLACE_ANIMALS_INFO__
+            Name: American Foxhound
+            Diet: Carnivora
+            Location: North-America
+            Type: Hound
+
+            Name: Arctic Fox
+            Diet: Carnivora
+            Location: Eurasia, Europe, North-America
+            Type: Mammal
+
+            Name: Cross Fox
+            Diet: Carnivora
+            Location: North-America
+            Type: mammal
+
+            Name: Darwinâ€™s fox
+            Diet: Carnivora
+            Location: South-America
+            Type: Mammal
+
+            Name: English Foxhound
+            Diet: Carnivora
+            Location: Europe
+            Type: Unknown
+
+            Name: Fennec Fox
+            Diet: Carnivora
+            Location: Africa, Asia
+            Type: Unknown
+
+            Name: Fox
+            Diet: Carnivora
+            Location: Africa, Asia, Eurasia, Europe, North-America
+            Type: Mammal
+
+            Name: Fox Snakes
+            Diet: Squamata
+            Location: North-America
+            Type: Unknown
+
+            Name: Fox Squirrel
+            Diet: Rodentia
+            Location: Central-America, North-America
+            Type: rodent
+
+            Name: Fox Terrier
+            Diet: Carnivora
+            Location: Europe
+            Type: Unknown
+
+            Name: Golden-Crowned Flying Fox
+            Diet: Chiroptera
+            Location: Asia
+            Type: Unknown
+
+            Name: Gray Fox
+            Diet: Carnivora
+            Location: Central-America, North-America, South-America
+            Type: Mammal
+
+            Name: Kit Fox
+            Diet: Carnivora
+            Location: Central-America, North-America
+            Type: mammal
+
+            Name: Marble Fox
+            Diet: Carnivora
+            Location: North-America
+            Type: Mammal
+
+            Name: Red Fox
+            Diet: Carnivora
+            Location: Africa, Asia, Europe, North-America, Oceania
+            Type: Unknown
+
+            Name: Smooth Fox Terrier
+            Diet: Carnivora
+            Location: Europe
+            Type: Unknown
+
+            Name: Tibetan Fox
+            Diet: Carnivora
+            Location: Asia
+            Type: Mammal
+
+            Name: Toy Fox Terrier
+            Diet: Carnivora
+            Location: North-America
+            Type: Unknown
+
+            Name: Wire Fox Terrier
+            Diet: Carnivora
+            Location: Europe
+            Type: Unknown
+
         </ul>
     </body>
 </html>
